--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <div id="header">
    <a href="index.html" id="head">
 	<h1>Ricette Italiane</h1>
-	<h2>Le migliori ricette del mediterraneo</h2>
+	<h2>Le migliori ricette del mediterraneo per voi</h2>
    </a>
 	<ul id="nav">
 	   <li><a href="index.html">Home</a></li>
